<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mad_project2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.mad_project2.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mad_project2.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.mad_project2.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_product_list"
        android:name="com.example.mad_project2.ProductListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.mad_project2.OrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.mad_project2.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>